feat(namespace): unified namespace